fix: return overflow

--- a/src/containers/4_Program/Program.modules.less
+++ b/src/containers/4_Program/Program.modules.less
@@ -6,6 +6,10 @@
 
 .page {
   ._resizedPage;
+
+  @media(min-width: 1350px){
+    overflow-x: hidden;
+  }
 }
 
 .wave_l {
